# productivity_MVP

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: run-tauri.mjs  setup-mediapipe.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  models.rs
src/components/: CalibrationPanel.tsx  DebugSignalsPanel.tsx  HistoryPanel.tsx  SectionCard.tsx  SessionControls.tsx  SettingsPanel.tsx  StateBadge.tsx  StateSummaryPanel.tsx  StatsPanel.tsx  TimelinePanel.tsx  TopBar.tsx  WebcamPanel.tsx
src/hooks/: useActivitySignals.ts  useAttentionInference.ts  useCameraTracking.ts  useProductivityTracker.ts
src/lib/: attention.ts  time.ts
src/services/activity/: activityTracker.ts
src/services/camera/: faceMath.ts  faceTracker.ts
src/services/inference/: calibration.ts  config.ts  engine.ts
src/services/session/: runtime.ts
src/services/storage/: browserStorage.ts  client.ts  exporters.ts  tauriStorage.ts
src/styles/: app.css
src/types/: app.ts
tests/: browserStorage.test.ts  calibration.test.ts  exporters.test.ts  inferenceEngine.test.ts  sessionRuntime.test.ts
