[package]
name = "app"
version = "0.1.0"
description = "Local-first desktop study behavior estimator built with Tauri"
authors = ["Ernest Terjyan"]
license = "MIT"
repository = "https://github.com/ernestterjyan/productivity_MVP"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
uuid = { version = "1.18", features = ["v4", "serde"] }
